--- a/HIITme/package.json
+++ b/HIITme/package.json
@@ -1,22 +1,30 @@
 {
   "name": "HIITme",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react-native-scripts": "1.13.2",
+    "jest-expo": "26.0.0",
+    "react-test-renderer": "16.3.0-alpha.1"
+  },
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
     "test": "jest"
   },
-  "dependencies": {
-    "react": "16.3.1",
-    "react-native": "0.55.3"
-  },
-  "devDependencies": {
-    "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-test-renderer": "16.3.1"
-  },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "expo": "^26.0.0",
+    "express-session": "^1.15.6",
+    "firebase": "^4.13.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "react": "^16.3.0",
+    "react-native": "~0.54.1"
   }
 }
