--- a/HIITme/package.json
+++ b/HIITme/package.json
@@ -22,9 +22,14 @@
     "expo": "^26.0.0",
     "express-session": "^1.15.6",
     "firebase": "^4.13.1",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.2",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "react": "^16.3.0",
-    "react-native": "~0.54.1"
+    "react-native": "~0.54.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
