--- a/HIITme/package.json
+++ b/HIITme/package.json
@@ -28,6 +28,7 @@
     "passport-google-oauth": "^1.0.0",
     "react": "^16.3.0",
     "react-native": "~0.54.1",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
