--- a/HIITme/package.json
+++ b/HIITme/package.json
@@ -24,6 +24,7 @@
     "firebase": "^4.13.1",
     "firebase-admin": "^5.12.0",
     "firebase-functions": "^1.0.2",
+    "moment": "^2.22.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "react": "^16.3.0",
